examples/test/testpolicy7966.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7966
  namespace: namespace495
spec:
  podSelector:
    matchLabels:
      key23: value10
      key13: value21
      key34: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value14
          key31: value33
      podSelector:
        matchLabels:
          key8: value6
          key6: value10
